--- a/VibeTube/package.json
+++ b/VibeTube/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
+	"main": "build/index.js",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -25,6 +26,9 @@
 		"svelte-check": "^4.3.3",
 		"typescript": "^5.9.3",
 		"vite": "^7.1.10"
+	},
+	"engines": {
+		"node": "18"
 	},
 	"dependencies": {
 		"bcryptjs": "^3.0.3",
